# dobicha

./: Injection_wo_coor.xlsx  coor.xlsx  data.xlsx  dobicha_itog.xlsx  dobicha_wo_coor.xlsx  fall_stick.ipynb  fault.xlsx  inj_itog.xlsx  itog.xlsx  main.ipynb  pyproject.toml  simpe.csv  stick0.txt  stick1.txt  stick10.txt  stick11.txt  stick12.txt  stick13.txt  stick14.txt  stick2.txt  stick3.txt  stick4.txt  stick5.txt  stick6.txt  stick7.txt  stick8.txt  stick9.txt  stics.xlsx  yar_dob.xlsx  yar_dobicha.ipynb  yar_dobicha.ipynb:Zone.Identifier  yar_itog.xlsx  yar_names.xlsx  yar_project.xlsx  yar_well_names.ipynb  yar_wells_itog.xlsx
